# wc2026-forecast-lab

./: .env.example  .gitignore  API_NOTES.md  CHANGELOG_MODEL.md  HANDOFF.md  MODEL_CARD.md  MODEL_FREEZE.md  Makefile  NEXT_STEP.md  PROJECT_STATE.json  PROJECT_STATE.md  README.md  RUNBOOK.md  SOURCE_MANIFEST.txt  app.py  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
configs/: model_version.json
data/: config.json  delta_june2026.csv  elo_live_params.json  elo_snapshot.csv  form_history.csv  h2h_records.csv  market_odds_sample.csv  model_freeze_manifest.json  penalty_history.csv  recent_form.csv  style_metrics.csv  style_metrics_BACKUP_PRE_P0.csv  team_display.csv  teams.csv  teams.csv.bak  teams_BACKUP_PRE_P0.csv  wc2026_live.json  wc_history.csv  xg_adjustment_config.json
docs/: CLEANUP_REPORT.json  CLEANUP_REPORT.md  DASHBOARD_PAGE_MAP.json  DASHBOARD_PAGE_MAP.md  DATA_FLOW_MAP.json  DATA_FLOW_MAP.md  DEPLOY_READINESS.md  DEPLOY_RENDER.md  DNS_SPACESHIP.md  FILE_AUTHORITY_TABLE.csv  FILE_AUTHORITY_TABLE.md  FUTURE_AGENT_START_HERE.md  LIVE_SYSTEM_TRUTH_AUDIT.json  LIVE_SYSTEM_TRUTH_AUDIT.md  PHASE_1D-B_NAV_PLAN.md  PHASE_2A_MODEL_PLAN.md  PHASE_2C_FULL_MODEL_RESEARCH_MAP.md  PHASE_2E_EXPERIMENT_SELECTION.md  PHASE_2G_EXPERIMENT_REASSESSMENT.md  PHASE_3A_EVIDENCE_LAB.md  PHASE_3B_EXTERNAL_DATA_ACCESS_RECON.md  PHASE_3C_SPORTMONKS_CAPABILITY_PROBE.md  PHASE_3D_SPORTMONKS_COVERAGE_CLOSURE.md  PHASE_3E_MARKET_ODDS_FEATURE_LAB.md  PHASE_3F_B_RPS_BASELINE_RECONCILIATION.md  PHASE_3F_MARKET_VS_PRODUCTION_BASELINE.md  PRIVACY.md  PROJECT_INDEX.md  (+19 more)
(+411 files in other folders)
